apps/gallery-dl/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gallery-dl
  labels:
    network-egress-dns: "true"
    network-egress-world: "true"
    network-ingress-deny-all: "true"
